sysdeps/x86/fpu/fix-fp-int-compare-invalid.h
@@ -20,9 +20,13 @@
 #ifndef FIX_FP_INT_COMPARE_INVALID_H
 #define FIX_FP_INT_COMPARE_INVALID_H	1
 
-/* As of GCC 5, both x87 and SSE comparisons use unordered comparison
+/* Before GCC 8, both x87 and SSE comparisons use unordered comparison
    instructions when they should use ordered comparisons
    <https://gcc.gnu.org/bugzilla/show_bug.cgi?id=52451>.  */
-#define FIX_COMPARE_INVALID 1
+#if __GNUC_PREREQ (8, 0)
+# define FIX_COMPARE_INVALID 0
+#else
+# define FIX_COMPARE_INVALID 1
+#endif
 
 #endif /* fix-fp-int-compare-invalid.h */
